# RSALOR

./: .gitignore  MANIFEST.in  README.md  colab_notebook_RSALOR.ipynb  conda-env.yml  pyproject.toml  setup.py  test.csv  w.txt
rsalor/: msa.py
rsalor/rsa/: __init__.py  rsa_dssp.py  rsa_music.py
rsalor/sequence/: __init__.py  amino_acid.py  fasta_reader.py  mutation.py  pairwise_alignment.py  sequence.py
rsalor/structure/: residue.py  structure.py
rsalor/utils/: CSV.py  __init__.py  utils.py
rsalor/weights/: CMakeLists.txt  computeWeightsBackend.cpp  compute_weights.py  msa.cpp
rsalor/weights/include/: msa.h
test_data/: 1r69_A_1-61.csv  2kfv_A_24-92.csv  2kfv_A_24-92.fasta  6scw_A_1-61.csv
